--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #container
 {
-	margin: 0 30px;
+	margin: 10 30px;
 	background: #fff;
 }
 
@@ -21,7 +21,7 @@
 
 #navigation ul
 {
-	margin: 0;
+	margin: 10;
 	padding: 0;
 }
 
@@ -35,7 +35,7 @@
 {
 	display: block;
 	float: left;
-	padding: 5px 10px;
+	padding: 0px 10px;
 	color: #fff;
 	text-decoration: none;
 	border-right: 1px solid #fff;
@@ -68,7 +68,7 @@
 }
 
 .news
-{	
+{
 	float: left;
 	width: 40%;
 	padding: 20px;
@@ -77,8 +77,8 @@
 	border-radius: 18px;
 	-webkit-box-shadow: 0px 0px 6px #000000;
 	box-shadow: 0px 0px 6px #000000;
-	background-image: -webkit-gradient(linear, left top, right top, from(#d6e1ff), to(#dbffe7));
-	background-image: -webkit-linear-gradient(left, #d6e1ff, #dbffe7);
+	background-image: -webkit-gradient(linear, left top, right top, from(#white), to(#white));
+	background-image: -webkit-linear-gradient(left, #white, #white);
 	background-image: linear-gradient(left, #d6e1ff, #dbffe7);
 	-webkit-background-clip: padding-box;
 	background-clip: padding-box;
