--- a/style.css
+++ b/style.css
@@ -54,9 +54,9 @@ text-align: center;
 	border-radius: 18px;
 	-webkit-box-shadow: 0px 0px 6px #000000;
 	box-shadow: 0px 0px 6px #000000;
-	background-image: -webkit-gradient(linear, left top, right top, from(#d6e1ff), to(#dbffe7));
-	background-image: -webkit-linear-gradient(left, #d6e1ff, #dbffe7);
-	background-image: linear-gradient(left, #d6e1ff, #dbffe7);
+	background-image: -webkit-gradient(linear, left top, right top, from(orange), to(#dbffe7));
+	background-image: -webkit-linear-gradient(left, orange, #dbffe7);
+	background-image: linear-gradient(left, orange, #dbffe7);
 	-webkit-background-clip: padding-box;
 	background-clip: padding-box;
 	opacity: 0.83;
@@ -79,9 +79,9 @@ text-align: center;
 	border-radius: 18px;
 	-webkit-box-shadow: 0px 0px 6px #000000;
 	box-shadow: 0px 0px 6px #000000;
-	background-image: -webkit-gradient(linear, left top, right top, from(#white), to(#white));
-	background-image: -webkit-linear-gradient(left, #white, #white);
-	background-image: linear-gradient(left, #d6e1ff, #dbffe7);
+	background-image: -webkit-gradient(linear, left top, right top, from(red), to(red));
+	background-image: -webkit-linear-gradient(left, red, red);
+	background-image: linear-gradient(left, blue, blue);
 	-webkit-background-clip: padding-box;
 	background-clip: padding-box;
 	opacity: 0.83;
